--- a/gallery.html
+++ b/gallery.html
@@ -54,6 +54,26 @@
       <br>
       <br>
 
+    <section class="media-gallery">
+      <h2>FRIENDS</h2>
+      <div class="photo-slider">
+        <button class="slide-btn prev">&#10094;</button>
+        <div class="slider-wrapper">
+          <div class="slide-track">
+            <img src="a.jpg" alt="Photo 1">
+            <img src="b.jpg" alt="Photo 2">
+            <img src="c.jpg" alt="Photo 3">
+            <img src="d.jpg" alt="Photo 5">
+            <img src="e.jpg" alt="Photo 6">
+            <img src="f.jpg" alt="Photo 7">
+            <img src="g.jpg" alt="Photo 8">
+            <img src="h.jpg" alt="Photo 9">
+          </div>
+        </div>
+        <button class="slide-btn next">&#10095;</button>
+      </div>
+    </section>
+
     <div class="family-gallery">
       <img src="image/4.jpg">
     </div>
